--- a/deploy/compose/dev.yml
+++ b/deploy/compose/dev.yml
@@ -1,10 +1,51 @@
 version: '3.8'
+
 services:
   traefik:
-    image: traefik:v2.5
-    command: --api.insecure=true --providers.docker
+    image: traefik:v2.10
+    command: 
+      - "--api.insecure=true" 
+      - "--providers.docker"
     ports:
       - "80:80"
       - "8080:8080"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+
+  db:
+    image: postgres:15-alpine
+    environment:
+      POSTGRES_DB: ipacx
+      POSTGRES_USER: ipacx
+      POSTGRES_PASSWORD: devpassword
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+
+  redis:
+    image: redis:7-alpine
+    ports:
+      - "6379:6379"
+
+  backend:
+    build:
+      context: ../../
+      dockerfile: deploy/docker/accounting.Dockerfile
+    volumes:
+      - ../../:/app
+    environment:
+      - DEBUG=True
+      - DATABASE_URL=postgres://ipacx:devpassword@db:5432/ipacx
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+    ports:
+      - "8000:8000"
+    depends_on:
+      - db
+      - redis
+    labels:
+      - "traefik.http.routers.backend.rule=Host(`api.localhost`)"
+
+volumes:
+  postgres_data:
